FAQs 2.0, Sign up, Login 2.0

--- a/Contact3.0.html
+++ b/Contact3.0.html
@@ -256,7 +256,7 @@
       <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
         <div>
           <a
-            href="https://forms.gle/eFFdhjrrdggAGPEu6"
+            href="Sign up.html"
             class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2"
             target="_blank"
             >Sign Up Now!</a
