--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -274,12 +274,10 @@
         background-color: #9063cd;
       }
 
-      /* .box .back::-webkit-scrollbar {
-  width: 10px;
-  height: 80%;
-
-}
-.box .back {
+      .box .back::-webkit-scrollbar {
+        display: none;
+      }
+      /* .box .back {
   scrollbar-width: thin;
   scrollbar-color: red #9063cd;;
 }
@@ -609,10 +607,7 @@
         .box .back .row:nth-of-type(2) {
           padding: 10px 10px;
         }
-        .box .back{
-          overflow: scroll;
-          -webkit-overflow-scrolling: touch;
-        }
+
         /* .box .back::-webkit-scrollbar {
           width: 10px;
           height: 80%;
