--- a/Login 2.0.html
+++ b/Login 2.0.html
@@ -3,12 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <meta name="keywords" content="Our Services" />
+    <meta name="keywords" content="​​Rates" />
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
-    <title>Services</title>
+    <title>Portal</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
-    <link rel="stylesheet" href="Services.css" media="screen" />
+    <link rel="stylesheet" href="Rates.css" media="screen" />
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
       rel="stylesheet"
@@ -20,6 +20,7 @@
       src="jquery.js"
       defer=""
     ></script>
+
     <script
       class="u-script"
       type="text/javascript"
@@ -32,6 +33,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i"
     />
+    <link
+      id="u-page-google-font"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    />
 
     <script type="application/ld+json">
       {
@@ -41,8 +47,9 @@
         "logo": "images/logosmall.png"
       }
     </script>
+
     <meta name="theme-color" content="#478ac9" />
-    <meta property="og:title" content="Services" />
+    <meta property="og:title" content="Rates" />
     <meta property="og:type" content="website" />
   </head>
   <body class="u-body u-xl-mode">
@@ -185,279 +192,76 @@
           </div>
         </nav>
       </div>
+      <style>
+        .hero-wraper {
+          display: flex;
+          margin: 0 40px;
+          align-items: center;
+          height: 40px;
+        }
+        header .hero-p {
+          margin-top: -3%;
+          font-size: 90%;
+        }
+        .hero-p {
+          text-align: center;
+          font-family: sans-serif;
+        }
+        .hero-img {
+          min-width: 250px;
+          min-height: 150px;
+          max-width: 20%;
+          display: grid;
+          place-items: center;
+          margin: auto;
+        }
+        
+      </style>
+      <div class="hero-wraper">
+        <img
+          src="images/favicon.png"
+          alt=""
+          style="
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #e295c4;
+            padding: 3px;
+          "
+        />
+        <h1
+          class="faq-hero"
+          style="
+            padding-left: 10px;
+            font-size: 32px;
+            font-weight: 500;
+            color: #fe4f02;
+            line-height: 16px;
+          "
+        >
+          Portal <br>
+        <span style="font-size: 16px;">Powered by TutorBird</span>
+        </h1>
+      </div>
+      <img
+        class="hero-img"
+        src="images/customcolor_logo_transparent_background.png"
+        alt=""
+      />
+      <p class="hero-p">
+        To access your profile, view your history, and join <br> your tutoring session, please sign in to your <br> account.
+      </p>
+
+    <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script>
     </header>
     <style>
-      .boxes {
-        position: relative;
-        width: 400px;
-        height: 400px;
-        list-style: none;
-        border-radius: 4px;
-        box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
-      }
-      .box-grid {
-        display: flex;
+      header .sb_login {
         width: 100%;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 25px;
-      }
-      .pink {
-        background-color: #ec5db5;
-        color: white;
-        text-align: center;
-      }
-
-      .yellow {
-        background-color: #f6c21e;
-        color: #ec5db5;
-        text-align: center;
-      }
-
-      .purple {
-        background-color: #8e64c9;
-        color: white;
-        text-align: center;
-      }
-
-      .box-center {
-        width: 100%;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        font-weight: 800;
-        font-size: 40px;
-        margin: 0;
-      }
-
-      .box-span {
-        font-size: 15px;
-      }
-
-      .a-btn {
-        position: absolute;
-        width: 12%;
-        top: 10%;
-        right: 10%;
-        background-color: #e9f2fa;
-        border-radius: 50%;
-        text-align: center;
-        font-size: 32px;
-        font-weight: 600;
-      }
-
-      .a-btn-2 {
-        position: absolute;
-        width: 18%;
-        bottom: 10%;
-        left: 10%;
-        border: 2px solid white;
-        color: white;
-        border-radius: 50%;
-        text-align: center;
-        font-size: 40px;
-        font-weight: 600;
-      }
-      .yellow .a-btn {
-        color: #f6c21e;
-        z-index: 2;
-      }
-
-      .pink .a-btn {
-        color: #ec5db5;
-      }
-      .purple .a-btn {
-        color: #8e64c9;
-      }
-      .u-body h1,
-      .u-body h2,
-      .u-body h3,
-      .u-body h4,
-      .u-body h5,
-      .u-body h6 {
-        padding: 0 73px;
-      }
-      .hero {
-        color: #ec5db5;
-      }
-      .hero-wraper {
-        display: flex;
-        align-items: center;
-        margin-left: 50px;
-      }
-      @media (max-width: 1600px) {
-        .boxes {
-          width: 20%;
-        }
-        .box-center {
-          font-size: 32px;
-        }
-
-        .u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0 56px;
-        }
-      }
-      @media (max-width: 1400px) {
-        .boxes {
-          width: 22%;
-          height: 300px;
-        }
-      }
-
-      @media (max-width: 1200px) {
-        .box-center {
-          font-size: 24px;
-        }
-        .u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0 53px;
-        }
-
-        .a-btn {
-          font-size: 21px;
-        }
-        .a-btn-2 {
-          font-size: 28px;
-        }
-      }
-      @media (max-width: 1000px) {
-        u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0px 29px;
-        }
-        .box-center {
-          font-size: 24px;
-        }
-        .boxes {
-          height: 225px;
-        }
-      }
-      @media (max-width: 700px) {
-        .boxes {
-          height: 300px;
-          width: 42%;
-        }
-
-        .box-center {
-          font-size: 36px;
-        }
-      }
-      @media (max-width: 550px) {
-        .boxes {
-          height: 250px;
-          width: 40%;
-        }
-
-        .box-center {
-          font-size: 24px;
-        }
-        u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0px 3px;
-        }
-        .a-btn {
-          font-size: 23px;
-          width: 27%;
-          height: 15%;
-        }
-      }
-      @media (max-width: 400px) {
-        .boxes {
-          height: 175px;
-          width: 40%;
-        }
-
-        .box-center {
-          font-size: 16px;
-        }
-        u-body h1,
-        .u-body h2,
-        .u-body h3,
-        .u-body h4,
-        .u-body h5,
-        .u-body h6 {
-          padding: 0px 23px;
-        }
-        .a-btn {
-          font-size: 10px;
-        }
-        .a-btn-2 {
-          font-size: 18px;
-        }
-        ul {
-          padding-left: 0;
-        }
+        margin-bottom: 40px !important;
       }
     </style>
-    <div class="hero-wraper">
-      <img
-        src="images/favicon.png"
-        alt=""
-        style="
-          width: 58px;
-          height: 56px;
-          border-radius: 50%;
-          background-color: #f6c21e;
-          padding: 3px;
-        "
-      />
-      <h1 class="hero" style="padding-left: 10px">Our Services</h1>
-    </div>
-    <ul class="box-grid">
-      <li class="boxes yellow">
-        <h3 class="box-center">CONTRACT WITH A SCHOOL</h3>
-        <a href="" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes pink">
-        <h3 class="box-center">ELEMENTARY SCHOOL TUTORING</h3>
-        <a href="spElementary.html" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes purple">
-        <h3 class="box-center">MIDDLE SCHOOL TUTORING</h3>
-        <a href="spMiddleSchool.html" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes pink">
-        <h3 class="box-center">HIGH SCHOOL TUTORING</h3>
-        <a href="spHighschool.html" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes purple">
-        <h3 class="box-center">SIGN UP NOW</h3>
-        <a href="Sign up.html" class="a-btn-2">&#129122;</a>
-      </li>
-      <li class="boxes yellow">
-        <h3 class="box-center">STATE & DISTRICT TEST PREP</h3>
-        <a href="spStateTestPrep.html" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes pink">
-        <h3 class="box-center">ACT/SAT TEST PREP</h3>
-        <a href="spActSatTestPrep.html" class="a-btn">&#128933;</a>
-      </li>
-      <li class="boxes yellow">
-        <h3 class="box-center">
-          EDUCATIONAL DIAGNOSTIC TESTING <br /><span class="box-span"
-            >**COMING SOON...</span
-          >
-        </h3>
-      </li>
-    </ul>
 
+   
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
       id="sec-1144"
