--- a/backEnd.html
+++ b/backEnd.html
@@ -37,7 +37,8 @@
   <a href="Contact3.0.html" class="pageButton">Contact 3.0</a>
   <a href="Services 2.0.html" class="pageButton">Services 2.0</a>
   <a href="FAQs 2.0.html" class="pageButton">FAQ 2.0</a>
-  <a href="Rates copy.html" class="pageButton">signin and login 2.0</a>
+  <a href="Sign up.html" class="pageButton">Sign in</a>
+  <a href="Login 2.0.html" class="pageButton">Login 2.0</a>
 </div>
 </body>
 </html>
