--- a/home2.html
+++ b/home2.html
@@ -252,7 +252,7 @@
         <div class="home2-sec4">
           <a href="Services.html" class="homebtn">Learn More</a>
           <a href="Contact.html" class="homebtn">Contact Us</a>
-          <a href="privcay.html" class="homebtn">Sign Up</a>
+          <a href="Sign up.html" class="homebtn">Sign Up</a>
         </div>
 
         <div class="home2-sec5">
