--- a/Sign up.html
+++ b/Sign up.html
@@ -11,16 +11,16 @@
     <link rel="stylesheet" href="Rates.css" media="screen" />
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script
       class="u-script"
       type="text/javascript"
       src="jquery.js"
       defer=""
     ></script>
-    
+
     <script
       class="u-script"
       type="text/javascript"
@@ -47,7 +47,7 @@
         "logo": "images/logosmall.png"
       }
     </script>
-   
+
     <meta name="theme-color" content="#478ac9" />
     <meta property="og:title" content="Rates" />
     <meta property="og:type" content="website" />
@@ -158,9 +158,7 @@
                   class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="/"
-                      >Home</a
-                    >
+                    <a class="u-button-style u-nav-link" href="/">Home</a>
                   </li>
                   <li class="u-nav-item">
                     <a class="u-button-style u-nav-link" href="About.html"
@@ -194,71 +192,133 @@
           </div>
         </nav>
       </div>
+      <style>
+        .hero-wraper {
+          display: flex;
+          margin: 0 40px;
+          align-items: center;
+          height: 40px;
+        }
+        header .hero-p {
+          margin-top: -3%;
+          font-size: 90%;
+        }
+        .hero-p {
+          text-align: center;
+          font-family: sans-serif;
+        }
+        .hero-img {
+          min-width: 250px;
+          min-height: 150px;
+          max-width: 20%;
+          display: grid;
+          place-items: center;
+          margin: auto;
+        }
+      </style>
+      <div class="hero-wraper">
+        <img
+          src="images/favicon.png"
+          alt=""
+          style="
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #e295c4;
+            padding: 3px;
+          "
+        />
+        <h1
+          class="faq-hero"
+          style="
+            padding-left: 10px;
+            font-size: 32px;
+            font-weight: 500;
+            color: #fe4f02;
+          "
+        >
+          SignUp
+        </h1>
+      </div>
+      <img
+        class="hero-img"
+        src="images/customcolor_logo_transparent_background.png"
+        alt=""
+      />
+      <p class="hero-p">
+        Are you ready to start your tutoring journey? <br />
+        Enter your information below to begin now.
+      </p>
+
+      <script
+        type="text/javascript"
+        src="https://app.tutorbird.com/Widget/v3/Registration.ashx?id=sch_TVbJz"
+        class="sb_registration"
+      ></script>
     </header>
     <style>
-      .sb_registration{
-        margin-top: 10px;
+      .sb_registration {
+        width: 100%;
       }
     </style>
-     <script type='text/javascript' src='https://app.tutorbird.com/Widget/v3/Registration.ashx?id=sch_TVbJz' class='sb_registration'></script>
-    <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script>
-    <footer
-    class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
-    id="sec-1144"
-  >
-    <div class="u-clearfix u-sheet-1 bottom-contianer">
-      <a
-        href="/"
-        class="u-logo u-image-1"
-        data-image-width="256"
-        data-image-height="191"
-      >
-        <img
-          src="images/logosmall.png"
-          class="footer-logo u-logo-image u-logo-image-1"
-        />
-      </a>
 
-      <div class="footer-block-1">
-        <a href="Services.html">Services</a>
-        <a href="About.html">About Us</a>
-        <a href="Contact.html">Contact Us</a>
-        <a href="privcay.html">Privacy Policy</a>
+    <!-- <script type='text/javascript' src='https://app.tutorbird.com/Widget/v2/Login.ashx'></script> -->
+    <footer
+      class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
+      id="sec-1144"
+    >
+      <div class="u-clearfix u-sheet-1 bottom-contianer">
+        <a
+          href="/"
+          class="u-logo u-image-1"
+          data-image-width="256"
+          data-image-height="191"
+        >
+          <img
+            src="images/logosmall.png"
+            class="footer-logo u-logo-image u-logo-image-1"
+          />
+        </a>
+
+        <div class="footer-block-1">
+          <a href="Services.html">Services</a>
+          <a href="About.html">About Us</a>
+          <a href="Contact.html">Contact Us</a>
+          <a href="privcay.html">Privacy Policy</a>
+        </div>
+        <div class="social-btns">
+          <div class="connect-margin">Connect with Us on Social Media</div>
+          <a
+            href="https://www.facebook.com/shiningbrighttutors"
+            class="fa fa-facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://twitter.com/S_Bright_Tutors"
+            class="fa fa-twitter"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.linkedin.com/company/shining-bright-tutors-llc"
+            class="fa fa-linkedin"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/shining_bright_tutors/"
+            class="fa fa-instagram"
+            target="_blank"
+          ></a>
+        </div>
+        <div class="footer-block-1">
+          <a href="Rates.html">Sign In</a>
+          <p>Drop Us a Line</p>
+          <input
+            type="email"
+            placeholder="Enter Your Email"
+            class="footer-email"
+          />
+        </div>
       </div>
-      <div class="social-btns">
-        <div class="connect-margin">Connect with Us on Social Media</div>
-        <a
-          href="https://www.facebook.com/shiningbrighttutors"
-          class="fa fa-facebook"
-          target="_blank"
-        ></a>
-        <a
-          href="https://twitter.com/S_Bright_Tutors"
-          class="fa fa-twitter"
-          target="_blank"
-        ></a>
-        <a
-          href="https://www.linkedin.com/company/shining-bright-tutors-llc"
-          class="fa fa-linkedin"
-          target="_blank"
-        ></a>
-        <a
-          href="https://www.instagram.com/shining_bright_tutors/"
-          class="fa fa-instagram"
-          target="_blank"
-        ></a>
-      </div>
-      <div class="footer-block-1">
-        <a href="Rates.html">Sign In</a>
-        <p>Drop Us a Line</p>
-        <input
-          type="email"
-          placeholder="Enter Your Email"
-          class="footer-email"
-        />
-      </div>
-    </div>
-  </footer>
+    </footer>
   </body>
 </html>
-
