--- a/spActSatTestPrep.html
+++ b/spActSatTestPrep.html
@@ -364,14 +364,22 @@
         class="side-hero-logo"
       />
       <h1 class="hero-header">SAT/ACT Test Prep</h1>
-      <img
-        class="icon-1st"
-        crossorigin="anonymous"
-        src="https://media-public.canva.com/b92yo/MAD_Trb92yo/1/t.png"
-        draggable="false"
-        alt="Hand Drawn Girl Saying Hello to Her Online Class"
-        style="object-fit: fill"
-      />
+      <div
+        class="DvXlvQ"
+        style="
+          width: 197.015px;
+          height: 131.343px;
+          transform: translate(0px, 0px) rotate(0deg);
+        "
+      >
+        <img
+          class="icon-1st"
+          crossorigin="anonymous"
+          src="https://media-private.canva.com/56mLU/MAFYbO56mLU/1/t.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230329%2Fus-east-1%2Fs3%2Faws4_request&amp;X-Amz-Date=20230329T183810Z&amp;X-Amz-Expires=83687&amp;X-Amz-Signature=ec949d8d68645c71ddfbca9f56471454aa9e5d7c9c2e93482de845554fdfac89&amp;X-Amz-SignedHeaders=host&amp;response-expires=Thu%2C%2030%20Mar%202023%2017%3A52%3A57%20GMT"
+          draggable="false"
+          style="object-fit: fill"
+        />
+      </div>
       <p class="hero-paragraph">
         Is your child going to take the SAT or ACT? If yes, we are here to
         assist you. Our goal is to equip your child with everything they need to
