--- a/spHighschool.html
+++ b/spHighschool.html
@@ -364,14 +364,22 @@
         class="side-hero-logo"
       />
       <h1 class="hero-header">High School Tutoring</h1>
-      <img
-        class="icon-1st"
-        crossorigin="anonymous"
-        src="https://media-public.canva.com/b92yo/MAD_Trb92yo/1/t.png"
-        draggable="false"
-        alt="Hand Drawn Girl Saying Hello to Her Online Class"
-        style="object-fit: fill"
-      />
+      <div
+        class="DvXlvQ"
+        style="
+          width: 156.912px;
+          height: 156.912px;
+          transform: translate(-5.68434e-14px, -4.87314px) rotate(0deg);
+        "
+      >
+        <img
+          class="icon-1st"
+          crossorigin="anonymous"
+          src="https://media-private.canva.com/B-h7U/MAFYbEB-h7U/1/t.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230329%2Fus-east-1%2Fs3%2Faws4_request&amp;X-Amz-Date=20230329T151034Z&amp;X-Amz-Expires=97619&amp;X-Amz-Signature=0f6d14f46c54d881753af4eb71c98fd10fe6b9ba90233928ce141dad0aaacf26&amp;X-Amz-SignedHeaders=host&amp;response-expires=Thu%2C%2030%20Mar%202023%2018%3A17%3A33%20GMT"
+          draggable="false"
+          style="object-fit: fill"
+        />
+      </div>
       <p class="hero-paragraph">
         During High School, students are often in the process of deciding their
         future path. That's where we come in to provide support in subjects such
