--- a/spMiddleSchool.html
+++ b/spMiddleSchool.html
@@ -364,14 +364,23 @@
         class="side-hero-logo"
       />
       <h1 class="hero-header">Middle School Tutoring</h1>
-      <img
-        class="icon-1st"
-        crossorigin="anonymous"
-        src="https://media-public.canva.com/b92yo/MAD_Trb92yo/1/t.png"
-        draggable="false"
-        alt="Hand Drawn Girl Saying Hello to Her Online Class"
-        style="object-fit: fill"
-      />
+      <div
+        class="DvXlvQ"
+        style="
+          width: 192.63px;
+          height: 129.938px;
+          transform: translate(0px, -1.42109e-14px) rotate(0deg);
+        "
+      >
+        <img
+          class="icon-1st"
+          crossorigin="anonymous"
+          src="https://media-public.canva.com/9OHIw/MAD_Tu9OHIw/1/t.png"
+          draggable="false"
+          alt="Hand Drawn Girl Typing on Her Laptop "
+          style="object-fit: fill"
+        />
+      </div>
       <p class="hero-paragraph">
         As children enter Middle School, they encounter more difficult subjects
         that can be challenging to handle. This is where we come in to support
