--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -511,6 +511,14 @@
         .box .back .row:nth-of-type(2) {
           padding: 10px 10px;
         }
+        @media (orientation: landscape) {
+          .hero {
+            height: 118vh;
+          }
+          .hero .faq-wrapper-middle {
+            height: 118vh;
+          }
+        }
       }
       @media (max-width: 700px) {
         .hero {
