--- a/Contact3.0.html
+++ b/Contact3.0.html
@@ -218,9 +218,12 @@
       .contact-align {
         align-items: flex-end;
       }
-      .address-box {
+      .top-section .address-box {
         color: rgba(255, 0, 0, 0.801);
         font-size: 20px;
+        align-self: center;
+        margin-right: 350px;
+        margin-top: 132px;
       }
       .button-split {
         display: flex;
@@ -235,11 +238,48 @@
       }
       .u-section-1 {
         margin-bottom: 100px;
+        height: 40vh;
       }
       .u-section-1 .u-text-1 {
         font-weight: lighter;
         margin: 0;
         font-size: 30px;
+        color: #8e64c9;
+      }
+      .u-button-style.u-border-black {
+        color: #9063cd !important;
+      }
+      .u-button-style.u-border-black:hover,
+      .u-button-style.u-border-black:focus {
+        border-color: #9063cd !important;
+        color: #000000 !important;
+        background-color: #f6be00 !important;
+      }
+
+      .u-hover-black:hover,
+      .u-hover-black[class*='u-border-']:hover,
+      .u-hover-black:focus,
+      .u-hover-black[class*='u-border-']:focus,
+      .u-active-black.u-active.u-active,
+      .u-active-black[class*='u-border-'].u-active.u-active,
+      a.u-button-style.u-hover-black:hover,
+      a.u-button-style.u-hover-black[class*='u-border-']:hover,
+      a.u-button-style:hover > .u-hover-black,
+      a.u-button-style:hover > .u-hover-black[class*='u-border-'],
+      a.u-button-style.u-hover-black:focus,
+      a.u-button-style.u-hover-black[class*='u-border-']:focus,
+      a.u-button-style.u-button-style.u-active-black:active,
+      a.u-button-style.u-button-style.u-active-black[class*='u-border-']:active,
+      a.u-button-style.u-button-style.u-active-black.active,
+      a.u-button-style.u-button-style.u-active-black[class*='u-border-'].active,
+      a.u-button-style.u-button-style.active > .u-active-black,
+      a.u-button-style.u-button-style.active
+        > .u-active-black[class*='u-border-'],
+      li.active > a.u-button-style.u-button-style.u-active-black,
+      li.active
+        > a.u-button-style.u-button-style.u-active-black[class*='u-border-'] {
+        color: #ffffff !important;
+        background-color: #f6be00 !important;
       }
       .u-section-1 .u-form-1 {
         width: 50%;
@@ -289,6 +329,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        align-self: center;
+        margin-bottom: 100px;
       }
       .call-us {
         color: #fe5610;
@@ -307,13 +349,17 @@
       .top-section {
         display: flex;
         justify-content: space-between;
-        margin: 100px;
+        height: 50vh;
       }
       .u-form-vertical.u-form-spacing-20 .u-form-group {
         margin-bottom: 0;
         padding-left: 0;
         display: flex;
         justify-content: space-around;
+      }
+      .sections-wrapper {
+        display: flex;
+        flex-direction: column;
       }
     </style>
     <div class="hero-wraper">
@@ -323,117 +369,119 @@
         class="hero"
       />
     </div>
-    <div class="top-section">
-      <div class="stamp-wrapper">
-        <span class="stamp is-approved">Call Us today</span>
-        <span class="call-us">(512) 607-5973</span>
-      </div>
-      <p class="address-box">
-        <br />
-        Send Mail to:
-        <br />
-        5900 Balcones Drive
-        <br />
-        Suite 6211
-        <br />
-        Austin, TX 78731
-      </p>
-    </div>
-    <section
-      class="u-align-center u-clearfix u-grey-5 u-section-1 button-split"
-      id="sec-6701"
-    >
-      <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
-        <div class="extra-flex">
-          <a
-            href="Sign up.html"
-            class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2"
-            style="padding: 10px 25%"
-            >Sign Up Now!</a
-          >
+    <div class="sections-wrapper">
+      <div class="top-section">
+        <div class="stamp-wrapper">
+          <span class="stamp is-approved">Call Us today</span>
+          <span class="call-us">(512) 607-5973</span>
         </div>
-        <div class="u-form u-form-1 u-1-box">
-          <div class="header-center">
-            <h1 class="u-text u-text-default u-text-1">Drop us a line!</h1>
+        <p class="address-box">
+          <br />
+          Send Mail to:
+          <br />
+          5900 Balcones Drive
+          <br />
+          Suite 6211
+          <br />
+          Austin, TX 78731
+        </p>
+      </div>
+      <section
+        class="u-align-center u-clearfix u-grey-5 u-section-1 button-split"
+        id="sec-6701"
+      >
+        <div class="u-clearfix u-valign-middle u-sheet-1 contact-align">
+          <div class="extra-flex">
+            <a
+              href="Sign up.html"
+              class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2"
+              style="padding: 10px 25%"
+              >Sign Up Now!</a
+            >
           </div>
-          <form
-            action="https://formsubmit.co/shiningbrighttutors@gmail.com"
-            method="POST"
-            class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
-            style="padding: 10px"
-          >
-            <div class="u-form-group u-form-name u-label-none">
-              <label for="name-3b9a" class="u-label">Name</label>
+          <div class="u-form u-form-1 u-1-box">
+            <div class="header-center">
+              <h1 class="u-text u-text-default u-text-1">Drop us a line!</h1>
+            </div>
+            <form
+              action="https://formsubmit.co/shiningbrighttutors@gmail.com"
+              method="POST"
+              class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form"
+              style="padding: 10px"
+            >
+              <div class="u-form-group u-form-name u-label-none">
+                <label for="name-3b9a" class="u-label">Name</label>
+                <input
+                  type="text"
+                  placeholder="Name"
+                  id="name-3b9a"
+                  name="name"
+                  class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
+                  required=""
+                />
+              </div>
+              <div class="u-form-email u-form-group u-label-none">
+                <label for="email-3b9a" class="u-label">Email</label>
+                <input
+                  type="email"
+                  placeholder="Email*"
+                  id="email-3b9a"
+                  name="email"
+                  class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
+                  required=""
+                />
+              </div>
+              <div class="u-form-group u-form-message u-label-none">
+                <label for="message-3b9a" class="u-label">Message</label>
+                <textarea
+                  placeholder="Message"
+                  rows="1"
+                  cols="2"
+                  id="message-3b9a"
+                  name="message"
+                  class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
+                  required=""
+                ></textarea>
+              </div>
+              <div class="u-align-center u-form-group u-form-submit">
+                <a
+                  href="/"
+                  class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                  >Home</a
+                >
+                <button
+                  class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
+                  type="submit"
+                >
+                  Send
+                </button>
+                <input
+                  type="submit"
+                  value="submit"
+                  class="u-form-control-hidden"
+                />
+              </div>
+              <div class="u-form-send-message u-form-send-success">
+                Thank you! Your message has been sent.
+              </div>
+              <div class="u-form-send-error u-form-send-message">
+                Unable to send your message. Please fix errors then try again.
+              </div>
               <input
-                type="text"
-                placeholder="Name"
-                id="name-3b9a"
-                name="name"
-                class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-1"
-                required=""
+                type="hidden"
+                value="https://formsubmit.co/shiningbrighttutors@gmail.com"
+                name="recaptchaResponse"
               />
-            </div>
-            <div class="u-form-email u-form-group u-label-none">
-              <label for="email-3b9a" class="u-label">Email</label>
               <input
-                type="email"
-                placeholder="Email*"
-                id="email-3b9a"
-                name="email"
-                class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-2"
-                required=""
+                type="hidden"
+                name="_next"
+                value="https://www.shiningbrighttutors.com/thanks.html"
               />
-            </div>
-            <div class="u-form-group u-form-message u-label-none">
-              <label for="message-3b9a" class="u-label">Message</label>
-              <textarea
-                placeholder="Message"
-                rows="1"
-                cols="2"
-                id="message-3b9a"
-                name="message"
-                class="u-border-2 u-border-black u-border-no-left u-border-no-right u-border-no-top u-input u-input-rectangle u-input-3"
-                required=""
-              ></textarea>
-            </div>
-            <div class="u-align-center u-form-group u-form-submit">
-              <a
-                href="/"
-                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
-                >Home</a
-              >
-              <button
-                class="u-border-2 u-border-black u-btn u-btn-rectangle u-btn-submit u-button-style u-none u-btn-1"
-                type="submit"
-              >
-                Send
-              </button>
-              <input
-                type="submit"
-                value="submit"
-                class="u-form-control-hidden"
-              />
-            </div>
-            <div class="u-form-send-message u-form-send-success">
-              Thank you! Your message has been sent.
-            </div>
-            <div class="u-form-send-error u-form-send-message">
-              Unable to send your message. Please fix errors then try again.
-            </div>
-            <input
-              type="hidden"
-              value="https://formsubmit.co/shiningbrighttutors@gmail.com"
-              name="recaptchaResponse"
-            />
-            <input
-              type="hidden"
-              name="_next"
-              value="https://www.shiningbrighttutors.com/thanks.html"
-            />
-          </form>
+            </form>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
