--- a/Contact3.0.html
+++ b/Contact3.0.html
@@ -222,8 +222,8 @@
         color: rgba(255, 0, 0, 0.801);
         font-size: 20px;
         align-self: center;
-        margin-right: 350px;
-        margin-top: 132px;
+        margin-right: 15%;
+        margin-top: 6%;
       }
       .button-split {
         display: flex;
@@ -288,7 +288,6 @@
       .extra-flex {
         flex-basis: 25%;
         align-self: center;
-        margin-top: 12%;
       }
       .header-center {
         text-align: -webkit-center;
@@ -361,6 +360,102 @@
         display: flex;
         flex-direction: column;
       }
+      .u-section-1 .u-sheet-1 {
+        min-height: 0%;
+      }
+      .sign-up {
+        padding: 10px 25%;
+      }
+      @media (max-width: 1200px) {
+        .is-approved {
+          border-radius: 20px;
+        }
+        .stamp {
+          font-size: 2rem;
+        }
+        .call-us {
+          font-size: 1.5rem;
+        }
+        .stamp-wrapper {
+          margin-left: 20px;
+        }
+        .hero {
+          position: absolute;
+          width: 100%;
+        }
+        .top-section .address-box {
+          margin-right: 6%;
+        }
+        .sign-up {
+          padding: 10px 6%;
+        }
+      }
+      @media (max-width: 1000px) {
+        .stamp {
+          font-size: 1.5rem;
+        }
+
+        .is-approved {
+          border-radius: 15px;
+        }
+        .call-us {
+          font-size: 1rem;
+        }
+        .stamp-wrapper {
+          margin-left: 20px;
+        }
+        .hero {
+          height: 90vh;
+          top: 15px;
+        }
+        .top-section .address-box {
+          margin-right: 6%;
+        }
+        .sign-up {
+          padding: 10px 6%;
+        }
+      }
+      @media (max-width: 800px) {
+          .hero {
+            height: 75vh;
+            top: 90px;
+          }
+          .top-section .address-box {
+            margin-right: 6%;
+            font-size: 1rem;
+            margin-top: 23%;
+          }
+        }
+        @media (max-width: 750px) {
+          .hero {
+            height: 40vh;
+            top: 130px;
+          }
+          .top-section {
+            height: 30vh;
+          }
+          .stamp-wrapper {
+            margin-bottom: 0px;
+          }
+          .u-section-1 .u-form-1 {
+            width: 100%;
+            padding-inline: 40px;
+          }
+          .u-section-1 {
+            height: 50vh;
+          }
+          .stamp {
+            font-size: 1rem;
+          }
+          .call-us {
+            font-size: 0.8rem;
+            margin-left: 30px;
+          }
+          .top-section .address-box {
+            margin-right: 5%;
+            font-size: 0.8rem;
+          }
+        }
     </style>
     <div class="hero-wraper">
       <img
@@ -394,8 +489,7 @@
           <div class="extra-flex">
             <a
               href="Sign up.html"
-              class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2"
-              style="padding: 10px 25%"
+              class="u-border-1 u-border-black u-btn u-button-style u-hover-black u-none u-text-hover-white u-btn-1 u-btn-rectangle u-border-2 sign-up"
               >Sign Up Now!</a
             >
           </div>
