--- a/Contact3.0.html
+++ b/Contact3.0.html
@@ -448,6 +448,7 @@
             font-size: 1rem;
           }
           .call-us {
+            color: #fe5610 !important;
             font-size: 0.8rem;
             margin-left: 30px;
           }
