--- a/Contact3.0.html
+++ b/Contact3.0.html
@@ -447,7 +447,7 @@
           .stamp {
             font-size: 1rem;
           }
-          .call-us {
+         .stamp-wrapper .call-us {
             color: #fe5610 !important;
             font-size: 0.8rem;
             margin-left: 30px;
