--- a/BackendLogin.html
+++ b/BackendLogin.html
@@ -6,7 +6,7 @@
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
   </head>
   <body>
-    <div>
+    <div style="margin: auto;">
       <a
       href="frontend.html"
       class="loginA"
