final edits to pages

--- a/About2.0.html
+++ b/About2.0.html
@@ -385,32 +385,29 @@
 
                     <h1 class="p-style">OUR CEO & FOUNDER</h1>
                     <p class="p-style">
-                      Karmen Kynard, originally from Toledo, Ohio started
-                      tutoring in January 2017. She started simply because she
-                      wanted to provide a service to students. She is a
-                      certified educator for grades K-12 and has served students
-                      in both general education and special education settings.
-                      She graduated with her Master’s in Education from Bowling
-                      Green State University in Ohio with a focus on Special
-                      Education. Her specialty is working with struggling
-                      learners in all core subjects. Continuing her education
-                      gained her another Master's in Education for Educational
+                      Karmen Kynard, hailing from Toledo, Ohio, began her
+                      tutoring journey in January 2017 with a simple desire to
+                      offer her services to students. With a K-12 teaching
+                      certification and experience in both general and special
+                      education, she obtained her Master's in Education from
+                      Bowling Green State University, Ohio, focusing on Special
+                      Education. Karmen specializes in helping struggling
+                      learners across all core subjects. Additionally, she
+                      pursued a second Master's in Education for Educational
                       Leadership.
                     </p>
                     <p class="p-style">
-                      Over the course of her career she has had the opportunity
-                      to (change font?)work at schools located in 4 different
-                      states (Ohio, Wisconsin, Louisiana, and Texas) and 6
-                      different cities (Toledo, Cleveland, Milwaukee, Baton
-                      Rouge, Lafayette, Austin). Due to teaching in multiple
-                      states, she has learned flexibility and how to adapt to
-                      differing state standards and curriculums.
+                      Throughout her career, Karmen has worked at schools in
+                      four different states (Ohio, Wisconsin, Louisiana, and
+                      Texas) and six different cities (Toledo, Cleveland,
+                      Milwaukee, Baton Rouge, Lafayette, and Austin). Teaching
+                      in multiple states taught her to be adaptable and flexible
+                      in accommodating varying state standards and curricula.
                     </p>
                     <p class="p-style">
-                      While she enjoyed tutoring, she realized that she could
-                      have a much larger impact if she started accepting and
-                      working with more tutors to support students and that when
-                      Shining Bright Tutors was born.
+                      While tutoring, Karmen realized that she could make a more
+                      significant impact by collaborating with other tutors to
+                      support students. Thus, Shining Bright Tutors was born.
                     </p>
                   </div>
                 </div>
@@ -464,7 +461,7 @@
                       setting.
                     </p>
                     <p>
-                      <span>OUR VISION</span> is to make tutoring accessible to
+                      <span>OUR VISION</span>is to make tutoring accessible to
                       anyone who needs it across the country.
                     </p>
                     <!-- <video style="width: 300px; height: 300px;" controls > <source src="https://video-public.canva.com/VAEXazshK64/v/3229262fa4.mp4"></video> -->
