--- a/spActSatTestPrep.html
+++ b/spActSatTestPrep.html
@@ -397,7 +397,11 @@
           pay for tutoring one hour at a time? Opt for our hourly rate of $75
           per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/4gwbKF8Js8kj17a3cz"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -409,7 +413,11 @@
           5-hour package is the perfect way to get started. You'll receive 5
           hours of personalized instruction at a rate of $73/hr.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/9AQ5mhaRAdED7vy9AY"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -421,7 +429,11 @@
           Choose a customized 10-hour package to meet your specific needs at a
           rate of $70/hr.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/8wMaGBbVEcAz0363cB"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -433,7 +445,11 @@
           our 15-hour package, which is tailored to meet your specific needs.
           The rate for this package is $65/hr.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/eVa2a57FodED7vy00q"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -445,12 +461,16 @@
           package that caters to your unique needs. Get started now at an
           affordable rate of $60/hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/4gw2a5cZIgQP2be7sT"
+          class="package-button"
+          >Select</a
+        >
       </li>
     </ul>
     <p class="bottom-note">
-      ***Please note: When you click pay now, payment is taken through stripe
-      and the convenience fee is included in the final price.***
+      ***Please note: When you click select, payment is taken through stripe and
+      the convenience fee is included in the final price.***
     </p>
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
