--- a/spHighschool.html
+++ b/spHighschool.html
@@ -399,7 +399,11 @@
           for one session at a time, you may opt for our hourly rate of $51 per
           hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/bIY4idgbU6cbdTW14h"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -411,7 +415,11 @@
           choose our 5-hour package to get started. This package is priced at
           $49 per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/8wMdSN7FodED4jmbIW"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -424,7 +432,11 @@
           to meet your specific requirements. This package is priced at $47 per
           hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/8wM1618JscAz03600f"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -436,7 +448,11 @@
           progress, you can choose our 15-hour package, which can be tailored to
           meet your specific needs. This package is priced at $44 per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/28ocOJcZIgQP7vyeVa"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -449,12 +465,16 @@
           to meet your specific requirements. This package is priced at $41 per
           hour
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/4gw01X9NwgQP9DGdR7"
+          class="package-button"
+          >Select</a
+        >
       </li>
     </ul>
     <p class="bottom-note">
-      ***Please note: When you click pay now, payment is taken through stripe
-      and the convenience fee is included in the final price.***
+      ***Please note: When you click select, payment is taken through stripe and
+      the convenience fee is included in the final price.***
     </p>
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
