--- a/spMiddleSchool.html
+++ b/spMiddleSchool.html
@@ -400,7 +400,11 @@
           for one session at a time, you may opt for our hourly rate of $48 per
           hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/5kA2a56BkcAzcPS14c"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -412,7 +416,11 @@
           choose our 5-hour package to get started. This package is priced at
           $46 per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/6oE8yt4tc8kjg247sB"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -425,7 +433,11 @@
           to meet your specific requirements. This package is priced at $44 per
           hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/aEUeWR7FogQP17aeV4"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -437,7 +449,11 @@
           progress, you can choose our 15-hour package, which can be tailored to
           meet your specific needs. This package is priced at $41 per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/eVa161cZI4439DG14f"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -450,12 +466,16 @@
           to meet your specific requirements. This package is priced at $38 per
           hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/6oE4idcZI443cPSbIU"
+          class="package-button"
+          >Select</a
+        >
       </li>
     </ul>
     <p class="bottom-note">
-      ***Please note: When you click pay now, payment is taken through stripe
-      and the convenience fee is included in the final price.***
+      ***Please note: When you click select, payment is taken through stripe and
+      the convenience fee is included in the final price.***
     </p>
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
