--- a/spStateTestPrep.html
+++ b/spStateTestPrep.html
@@ -399,7 +399,11 @@
           pay for tutoring one hour at a time? Opt for our hourly rate of $65
           per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/eVa8ytaRAdED2be3cu"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -411,7 +415,11 @@
           5-hour package is the perfect way to get started. You'll receive 5
           hours of personalized instruction at a rate of $63/hr.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/4gw7up0cWcAz8zC4gz"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -423,7 +431,11 @@
           Choose a customized 10-hour package to meet your specific needs at a
           rate of $60/hr.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/14k161gbUfML3fieVe"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -435,7 +447,11 @@
           our 15-hour package, which is tailored to meet your specific needs.
           The rate for this package is $55/hr.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/28o7up1h0bwv5nq00l"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -447,12 +463,16 @@
           package that caters to your unique needs. Get started now at an
           affordable rate of $50/hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/cN22a55xg9on8zC3cy"
+          class="package-button"
+          >Select</a
+        >
       </li>
     </ul>
     <p class="bottom-note">
-      ***Please note: When you click pay now, payment is taken through stripe
-      and the convenience fee is included in the final price.***
+      ***Please note: When you click select, payment is taken through stripe and
+      the convenience fee is included in the final price.***
     </p>
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
