--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -7,6 +7,12 @@
       href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta name="keywords" content="Facts &amp;amp; Questions" />
@@ -263,7 +269,7 @@
         top: 10%;
         left: 20%;
         width: 60%;
-        height: 60%;
+        min-height: 60%;
         backface-visibility: hidden;
         transform: perspective(1000px) rotateY(-180deg);
         transition: 1s;
@@ -351,7 +357,7 @@
         color: white;
         white-space: nowrap;
         display: inline-block;
-        font-family: 'Gloria Hallelujah', cursive;
+        font-family: 'Edu NSW ACT Foundation', cursive;
         text-transform: uppercase;
         margin: 0;
       }
@@ -363,7 +369,7 @@
         box-sizing: border-box;
         padding: 0 0 0 35px;
         margin-bottom: 5px;
-        font-family: 'Gloria Hallelujah', cursive;
+        font-family: 'Edu NSW ACT Foundation', cursive;
         text-transform: uppercase;
       }
       .box .back .row span::before {
@@ -410,8 +416,9 @@
         }
         /* This is for the backcard */
         .box .back {
+          top: 0;
           width: 65%;
-          height: 63%;
+          min-height: 63%;
         }
         .box .back .row h1 {
           font-size: 36px;
