--- a/spElementary.html
+++ b/spElementary.html
@@ -390,7 +390,11 @@
           Don't know how many hours you need or want to pay for one hour at a
           time? Choose this hourly rate. $45/hr.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/cN2bKFaRAfML036004"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -402,7 +406,11 @@
           choose our 5-hour package to get started. This package is priced at
           $43 per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/7sIg0VcZI0RR9DG3cf"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -415,7 +423,12 @@
           to meet your specific requirements. This package is priced at $41 per
           hour.
         </p>
-        <a href="" class="package-button">Select</a>
+
+        <a
+          href="https://buy.stripe.com/9AQ2a57Fobwv6ru28d"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -427,7 +440,11 @@
           progress, you can choose our 15-hour package, which can be tailored to
           meet your specific needs. This package is priced at $38 per hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/cN2aGB5xgfMLaHKeV0"
+          class="package-button"
+          >Select</a
+        >
       </li>
       <li class="package-list">
         <h4 class="package-header">
@@ -440,12 +457,16 @@
           to meet your specific requirements. This package is priced at $35 per
           hour.
         </p>
-        <a href="" class="package-button">Select</a>
+        <a
+          href="https://buy.stripe.com/bIYcOJ4tc443g249AH"
+          class="package-button"
+          >Select</a
+        >
       </li>
     </ul>
     <p class="bottom-note">
-      ***Please note: When you click pay now, payment is taken through stripe
-      and the convenience fee is included in the final price.***
+      ***Please note: When you click select, payment is taken through stripe and
+      the convenience fee is included in the final price.***
     </p>
     <footer
       class="u-align-center u-clearfix u-footer u-grey-80 u-footer"
