--- a/FAQs 2.0.html
+++ b/FAQs 2.0.html
@@ -275,6 +275,7 @@
         transform: perspective(1000px) rotateY(0deg);
         transition: 1s;
         padding: 6rem;
+        box-shadow: 5px 6px 5px 1px rgba(0, 0, 0, 0.4);
       }
       .box:hover .front {
         transform: perspective(1000px) rotateY(180deg);
