final edits to mobile

--- a/Contact3.0.html
+++ b/Contact3.0.html
@@ -336,6 +336,7 @@
         transform: rotate(-14deg);
         font-size: 36px;
         margin-left: 50px;
+        padding-bottom: 5px;
       }
       .is-approved {
         color: #fe5610;
@@ -365,6 +366,16 @@
       }
       .sign-up {
         padding: 10px 25%;
+      }
+      @media (max-height: 850px) {
+        .u-section-1{
+          height: 45vh;
+        }
+      }
+      @media (max-height: 700px) {
+        .u-section-1{
+          height: 50vh;
+        }
       }
       @media (max-width: 1200px) {
         .is-approved {
